--- a/docs/Notebooks/PyNeb_manual_2.ipynb
+++ b/docs/Notebooks/PyNeb_manual_2.ipynb
@@ -26,18 +26,12 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/morisset/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pyneb as pn\n",
     "O3 = pn.Atom('O', 3)\n",
@@ -51,7 +45,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -75,7 +72,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -99,7 +99,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -124,7 +127,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -149,7 +155,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -173,7 +182,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -198,7 +210,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -232,7 +247,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -266,7 +284,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -300,7 +321,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -334,7 +358,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -359,7 +386,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -403,7 +433,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -449,7 +482,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -483,7 +519,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -517,7 +556,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -541,7 +583,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -577,7 +622,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -601,7 +649,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -645,7 +696,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -689,7 +743,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -713,7 +770,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -764,7 +824,6 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -791,7 +850,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -805,6 +867,8 @@
       "warng _ManageAtomicData: rec data not available for Ar5\n",
       "warng _ManageAtomicData: rec data not available for Ba2\n",
       "warng _ManageAtomicData: rec data not available for Ba4\n",
+      "ERROR None: No data for this case B\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: rec data not available for Ca5\n",
       "warng _ManageAtomicData: rec data not available for Cl2\n",
       "warng _ManageAtomicData: rec data not available for Cl3\n",
@@ -814,6 +878,7 @@
       "warng _ManageAtomicData: rec data not available for K5\n",
       "warng _ManageAtomicData: rec data not available for Mg5\n",
       "warng _ManageAtomicData: rec data not available for Mg7\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: rec data not available for Na4\n",
       "warng _ManageAtomicData: rec data not available for Na6\n",
       "warng _ManageAtomicData: rec data not available for Ne3\n",
@@ -821,6 +886,7 @@
       "warng _ManageAtomicData: rec data not available for Ne5\n",
       "warng _ManageAtomicData: rec data not available for Ne6\n",
       "warng _ManageAtomicData: rec data not available for Ni3\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: rec data not available for S2\n",
       "warng _ManageAtomicData: rec data not available for S3\n",
       "warng _ManageAtomicData: rec data not available for S4\n",
@@ -859,7 +925,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -965,7 +1034,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -986,13 +1058,18 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ERROR None: No data for this case B\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: data for C5 not available\n",
       "warng _ManageAtomicData: data for C5 not available\n",
       "warng _ManageAtomicData: data for C5 not available\n",
@@ -1002,16 +1079,20 @@
       "warng _ManageAtomicData: data for C7 not available\n",
       "warng _ManageAtomicData: data for C7 not available\n",
       "warng _ManageAtomicData: data for C7 not available\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: atom data not available for N5\n",
       "warng _ManageAtomicData: coll data not available for N5\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: data for N6 not available\n",
       "warng _ManageAtomicData: data for N6 not available\n",
       "warng _ManageAtomicData: data for N6 not available\n",
       "warng _ManageAtomicData: data for N7 not available\n",
       "warng _ManageAtomicData: data for N7 not available\n",
       "warng _ManageAtomicData: data for N7 not available\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: atom data not available for O6\n",
       "warng _ManageAtomicData: coll data not available for O6\n",
+      "ERROR None: No data for this case B\n",
       "warng _ManageAtomicData: data for O7 not available\n",
       "warng _ManageAtomicData: data for O7 not available\n",
       "warng _ManageAtomicData: data for O7 not available\n"
@@ -1028,7 +1109,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1073,7 +1157,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1094,7 +1181,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1134,7 +1224,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1158,7 +1251,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1192,7 +1288,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1224,7 +1323,6 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -1250,7 +1348,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1285,9 +1386,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
