--- a/docs/Notebooks/PyNeb_manual_6.ipynb
+++ b/docs/Notebooks/PyNeb_manual_6.ipynb
@@ -3,19 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/morisset/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -46,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "line = pn.EmissionLine('O', 3, 5007, obsIntens=[1.4, 1.3])\n",
@@ -66,7 +53,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -92,7 +82,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -131,9 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "redcorr = pn.RedCorr(E_BV = 0.87, law = 'F99')"
@@ -142,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "line.correctIntens(redcorr) #redcorr is used to compute line.corrIntens"
@@ -161,7 +150,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -198,7 +190,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -225,7 +220,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -252,7 +250,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -284,7 +285,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -304,7 +308,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -351,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs = pn.Observation()"
@@ -363,14 +368,17 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing observations1.dat\n"
+      "Overwriting observations1.dat\n"
      ]
     }
    ],
@@ -408,7 +416,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -419,7 +430,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -461,9 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs.extinction.law = 'CCM89'  # define the extinction law from Cardelli et al.\n",
@@ -480,9 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs = pn.Observation('observations1.dat', fileFormat='lines_in_rows', corrected=True)"
@@ -499,14 +509,17 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing observations2.dat\n"
+      "Overwriting observations2.dat\n"
      ]
     }
    ],
@@ -521,9 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs2 = pn.Observation('observations2.dat', fileFormat='lines_in_cols', corrected=True)"
@@ -540,14 +551,17 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing observations3.dat\n"
+      "Overwriting observations3.dat\n"
      ]
     }
    ],
@@ -564,7 +578,10 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -582,7 +599,10 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -692,9 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs = pn.Observation('observations1.dat', fileFormat='lines_in_rows', corrected=True)\n",
@@ -712,9 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs.extinction.law = 'F99'"
@@ -730,9 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs.correctData()"
@@ -742,7 +756,10 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -785,7 +802,10 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -834,9 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs.correctData(normWave=4861.)"
@@ -853,7 +871,10 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -896,7 +917,10 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -917,7 +941,10 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -974,7 +1001,10 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1024,9 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "atomList = obs.getUniqueAtoms()"
@@ -1036,7 +1064,10 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1072,9 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs.addObs('test', np.random.rand(25))"
@@ -1091,38 +1120,41 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S4_10.5m      4.076    0.672\n",
-      "Ne2_12.8m     4.826    0.279\n",
-      "Ne3_15.6m    19.803    0.419\n",
-      "S3_18.7m      5.802    0.822\n",
-      "O2_3726A     46.576    0.957\n",
-      "O2_3729A     21.812    0.220\n",
-      "Ne3_3869A    21.722    0.319\n",
-      "Ne3_3968A     7.255    0.009\n",
-      "S2_4069A      0.950    0.674\n",
-      "S2_4076A      0.503    0.656\n",
-      "O3_4363A      4.687    0.536\n",
-      "H1r_4861A   100.000    0.611\n",
-      "O3_5007A    425.599    0.757\n",
-      "N2_5755A      0.454    0.552\n",
-      "S3_6312A      0.641    0.953\n",
-      "O1_6300A      1.428    0.755\n",
-      "O1_6364A      0.454    0.524\n",
-      "N2_6548A      5.657    0.149\n",
-      "H1r_6563A   285.000    0.699\n",
-      "N2_6584A     15.668    0.821\n",
-      "S2_6716A      0.995    0.638\n",
-      "S2_6731A      1.777    0.156\n",
-      "Ar3_7136A     3.882    0.443\n",
-      "O2_7319A+     5.106    0.050\n",
-      "O2_7330A+     4.034    0.159\n"
+      "S4_10.5m      4.076    0.426\n",
+      "Ne2_12.8m     4.826    0.373\n",
+      "Ne3_15.6m    19.803    0.541\n",
+      "S3_18.7m      5.802    0.838\n",
+      "O2_3726A     46.576    0.836\n",
+      "O2_3729A     21.812    0.381\n",
+      "Ne3_3869A    21.722    0.381\n",
+      "Ne3_3968A     7.255    0.080\n",
+      "S2_4069A      0.950    0.570\n",
+      "S2_4076A      0.503    0.393\n",
+      "O3_4363A      4.687    0.171\n",
+      "H1r_4861A   100.000    0.987\n",
+      "O3_5007A    425.599    0.086\n",
+      "N2_5755A      0.454    0.997\n",
+      "S3_6312A      0.641    0.588\n",
+      "O1_6300A      1.428    0.241\n",
+      "O1_6364A      0.454    0.057\n",
+      "N2_6548A      5.657    0.062\n",
+      "H1r_6563A   285.000    0.785\n",
+      "N2_6584A     15.668    0.732\n",
+      "S2_6716A      0.995    0.457\n",
+      "S2_6731A      1.777    0.773\n",
+      "Ar3_7136A     3.882    0.249\n",
+      "O2_7319A+     5.106    0.486\n",
+      "O2_7330A+     4.034    0.405\n"
      ]
     }
    ],
@@ -1133,9 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "line = pn.EmissionLine(label='Cl3_5518A', obsIntens=[3.5, 2.5])\n",
@@ -1146,38 +1176,41 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S4_10.5m      4.076    0.672\n",
-      "Ne2_12.8m     4.826    0.279\n",
-      "Ne3_15.6m    19.803    0.419\n",
-      "S3_18.7m      5.802    0.822\n",
-      "O2_3726A     46.576    0.957\n",
-      "O2_3729A     21.812    0.220\n",
-      "Ne3_3869A    21.722    0.319\n",
-      "Ne3_3968A     7.255    0.009\n",
-      "S2_4069A      0.950    0.674\n",
-      "S2_4076A      0.503    0.656\n",
-      "O3_4363A      4.687    0.536\n",
-      "H1r_4861A   100.000    0.611\n",
-      "O3_5007A    425.599    0.757\n",
-      "N2_5755A      0.454    0.552\n",
-      "S3_6312A      0.641    0.953\n",
-      "O1_6300A      1.428    0.755\n",
-      "O1_6364A      0.454    0.524\n",
-      "N2_6548A      5.657    0.149\n",
-      "H1r_6563A   285.000    0.699\n",
-      "N2_6584A     15.668    0.821\n",
-      "S2_6716A      0.995    0.638\n",
-      "S2_6731A      1.777    0.156\n",
-      "Ar3_7136A     3.882    0.443\n",
-      "O2_7319A+     5.106    0.050\n",
-      "O2_7330A+     4.034    0.159\n",
+      "S4_10.5m      4.076    0.426\n",
+      "Ne2_12.8m     4.826    0.373\n",
+      "Ne3_15.6m    19.803    0.541\n",
+      "S3_18.7m      5.802    0.838\n",
+      "O2_3726A     46.576    0.836\n",
+      "O2_3729A     21.812    0.381\n",
+      "Ne3_3869A    21.722    0.381\n",
+      "Ne3_3968A     7.255    0.080\n",
+      "S2_4069A      0.950    0.570\n",
+      "S2_4076A      0.503    0.393\n",
+      "O3_4363A      4.687    0.171\n",
+      "H1r_4861A   100.000    0.987\n",
+      "O3_5007A    425.599    0.086\n",
+      "N2_5755A      0.454    0.997\n",
+      "S3_6312A      0.641    0.588\n",
+      "O1_6300A      1.428    0.241\n",
+      "O1_6364A      0.454    0.057\n",
+      "N2_6548A      5.657    0.062\n",
+      "H1r_6563A   285.000    0.785\n",
+      "N2_6584A     15.668    0.732\n",
+      "S2_6716A      0.995    0.457\n",
+      "S2_6731A      1.777    0.773\n",
+      "Ar3_7136A     3.882    0.249\n",
+      "O2_7319A+     5.106    0.486\n",
+      "O2_7330A+     4.034    0.405\n",
       "Cl3_5518A     5.534    3.953\n"
      ]
     }
@@ -1204,7 +1237,10 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1226,7 +1262,10 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1273,13 +1312,16 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4.03377032, 0.15866148])"
+       "array([4.03377032, 0.40459029])"
       ]
      },
      "execution_count": 42,
@@ -1309,7 +1351,10 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1351,7 +1396,10 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1374,6 +1422,13 @@
    "source": [
     "ab_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1392,9 +1447,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
