--- a/docs/Notebooks/PyNeb_manual_7b.ipynb
+++ b/docs/Notebooks/PyNeb_manual_7b.ipynb
@@ -3,19 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/morisset/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pyneb as pn\n",
     "import numpy as np"
@@ -58,7 +47,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -72,7 +64,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -115,7 +110,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -134,7 +132,7 @@
       "H1r_6563A  12.01\n",
       "N2_5755A   6.36\n",
       "N2_6548A   6.38\n",
-      "N2_6584A   6.36\n",
+      "N2_6584A   6.35\n",
       "Ne2_12.8m  6.77\n",
       "Ne3_15.6m  7.11\n",
       "Ne3_3869A  7.07\n",
@@ -147,7 +145,7 @@
       "O2_7330A+  7.29\n",
       "O3_4363A   7.89\n",
       "O3_5007A   7.92\n",
-      "S2_4069A   5.08\n",
+      "S2_4069A   5.07\n",
       "S2_4076A   5.29\n",
       "S2_6716A   5.18\n",
       "S2_6731A   5.12\n",
@@ -178,24 +176,27 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ar3 [2.1528946442539843e-07]\n",
-      "H1r [1.0, 1.0118929765886284]\n",
-      "N2 [2.289652093210546e-06, 2.413298266989258e-06, 2.271684832803467e-06]\n",
-      "Ne2 [5.905111450114605e-06]\n",
-      "Ne3 [1.2924607125398534e-05, 1.1873083428775329e-05, 1.316509048649941e-05]\n",
-      "O1 [1.4587786123355058e-06, 1.4512515727307564e-06]\n",
-      "O2 [2.9484966486284868e-05, 3.040199841759567e-05, 2.1076205142152512e-05, 1.9456664936147367e-05]\n",
-      "O3 [7.824150166036608e-05, 8.343191923752029e-05]\n",
-      "S2 [1.195881774170362e-07, 1.9578449298916088e-07, 1.5124222321153e-07, 1.331376274623044e-07]\n",
-      "S3 [8.598728891989195e-07, 6.655170891015524e-07]\n",
-      "S4 [1.4765564919152136e-07]\n"
+      "Ar3 [2.1378200554048055e-07]\n",
+      "H1r [1.0, 1.012426284751474]\n",
+      "N2 [2.2736199273983762e-06, 2.3964003294880454e-06, 2.2557784739201715e-06]\n",
+      "Ne2 [5.863763803374603e-06]\n",
+      "Ne3 [1.2834108902936717e-05, 1.1789947985274417e-05, 1.3072908397247668e-05]\n",
+      "O1 [1.448564230567394e-06, 1.4410898953658049e-06]\n",
+      "O2 [2.927851246950385e-05, 3.0189123334478235e-05, 2.0928629352567606e-05, 1.9320429182543967e-05]\n",
+      "O3 [7.76936539188984e-05, 8.284772814263309e-05]\n",
+      "S2 [1.1875081985725224e-07, 1.944136081004211e-07, 1.5018322372094437e-07, 1.3220539652396933e-07]\n",
+      "S3 [8.538520510209691e-07, 6.608571320910761e-07]\n",
+      "S4 [1.4662176292645887e-07]\n"
      ]
     }
    ],
@@ -208,7 +209,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -217,13 +221,13 @@
      "text": [
       "Ar3 : 5.33\n",
       "H1r : 12.00\n",
-      "N2  : 6.37\n",
+      "N2  : 6.36\n",
       "Ne2 : 6.77\n",
       "Ne3 : 7.10\n",
       "O1  : 6.16\n",
       "O2  : 7.40\n",
-      "O3  : 7.91\n",
-      "S2  : 5.18\n",
+      "O3  : 7.90\n",
+      "S2  : 5.17\n",
       "S3  : 5.88\n",
       "S4  : 5.17\n"
      ]
@@ -253,9 +257,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
