Add AI4Ndb entry

--- a/examples/Notebooks/PyNeb_manual_9.ipynb
+++ b/examples/Notebooks/PyNeb_manual_9.ipynb
@@ -317,7 +317,15 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time for classical method: 269.565301 s.\n"
+     ]
+    }
+   ],
    "source": [
     "# Normal way: looking for the point where both diagnostics coincide:\n",
     "pn.config.use_multiprocs()\n",
@@ -442,12 +450,18 @@
     "start = time.time()\n",
     "temNN, denNN = diags.getCrossTemDen('[OIII] 4363/5007', '[SII] 6731/6716', \n",
     "                                    rO3, rS2, \n",
-    "                                    use_ANN=True, end_den=1e6, start_tem=3e3,limit_res=False)\n",
+    "                                    use_ANN=True, \n",
+    "                                    start_den=10, end_den=1e6, \n",
+    "                                    start_tem=3000, end_tem=2000,\n",
+    "                                    limit_res=False)\n",
     "diags.ANN.save_RM('O3_S2')\n",
     "print(diags.ANN.train_score)\n",
     "temNN2, denNN2 = diags.getCrossTemDen('[NII] 5755/6584', '[SII] 6731/6716', \n",
     "                                      rN2, rS2, \n",
-    "                                      use_ANN=True, end_den=1e6, start_tem=3e3,limit_res=False)\n",
+    "                                      use_ANN=True, \n",
+    "                                      start_den=10, end_den=1e6, \n",
+    "                                      start_tem=3000, end_tem=2000,\n",
+    "                                      limit_res=False)\n",
     "diags.ANN.save_RM('N2_S2')\n",
     "print(diags.ANN.train_score)\n",
     "end2 = time.time()\n",
