--- a/docs/Notebooks/use_HeI_DZS22.ipynb
+++ b/docs/Notebooks/use_HeI_DZS22.ipynb
@@ -1187,7 +1187,7 @@
       "wl_in_air [True]: if True, wl is in air\n",
       "tol_wl [0.01]: tolerance in wavelength\n",
       "getDetailed [False]: if True, return the detailed level information, else only \n",
-      "    the label (wl in vaccuum)\n",
+      "    the label (wl in vacuum)\n",
       "\u001b[0;31mFile:\u001b[0m      ~/Google Drive/Pro/PyNeb_devel/pyneb/utils/manage_atomic_data.py\n",
       "\u001b[0;31mType:\u001b[0m      method\n"
      ]
@@ -1404,8 +1404,8 @@
     }
    ],
    "source": [
-    "print(HeI_def.getEmissivity(1.1e4, 1e2, wave = 4471), \n",
-    "      HeI.getEmissivity(1.1e4, 1e2, label = pn.atomicData.getDZN22Level_from_wl(4471)))"
+    "print(HeI_def.getEmissivity(1.1e4, 1e2, wave = 4471.), \n",
+    "      HeI.getEmissivity(1.1e4, 1e2, label = pn.atomicData.getDZN22Level_from_wl(4471.)))"
    ]
   }
  ],
