--- a/docs/Notebooks/PyNeb_manual_8.ipynb
+++ b/docs/Notebooks/PyNeb_manual_8.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyneb as pn"
+    "import pyneb as pn\n",
+    "import numpy as np"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -90,14 +91,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "warng ICF: 1./(1. - abun[\"N2\"] / elem_abun[\"KB94_A1.10b\"]) cannot be evaluated for KB94_A30.10b\n",
-      "{'direct_He.23': nan, 'direct_N.23': nan, 'direct_N.234': nan, 'direct_N.2345': nan, 'direct_O.23': nan, 'direct_O.234': nan, 'direct_O.2345': nan, 'direct_S.23': nan, 'direct_S.234': nan, 'direct_S.2345': nan, 'direct_Ne.23': nan, 'direct_Ne.235': nan, 'direct_Ne.2345': nan, 'direct_Ne.345': nan, 'direct_Ne.2356': nan, 'direct_Mg.45': nan, 'direct_Ar.23': nan, 'direct_Ar.234': nan, 'direct_Ar.345': nan, 'direct_Cl.23': nan, 'direct_Cl.34': nan, 'direct_Cl.234': nan, 'TPP77_13': nan, 'TPP77_14': nan, 'TPP77_15': nan, 'PHCD07_12': nan, 'PHCD07_13': nan, 'PHCD07_16': nan, 'PHCD07_17': nan, 'ITL94_19': nan, 'ITL94_20': nan, 'PTPR92_21': nan, 'KB94_A0': nan, 'KB94_A6': nan, 'KB94_A8': nan, 'KB94_A10': nan, 'KB94_A10b': nan, 'KB94_A12': nan, 'KB94_A13.10': nan, 'KB94_A13.10b': nan, 'KB94_A16': nan, 'KB94_A19': nan, 'KB94_A21': nan, 'KB94_A26': nan, 'KB94_A27': nan, 'KB94_A28.6': nan, 'KB94_A28.8': nan, 'KB94_A28.10': nan, 'KB94_A28.10b': nan, 'KB94_A30.0': nan, 'KB94_A32': nan, 'KB94_A36.6': nan, 'KB94_A36.8': nan, 'KB94_A36.10': nan, 'KB94_A36.10b': nan, 'KH01_4a': nan, 'KH01_4b': nan, 'KH01_4c': nan, 'KH01_4d': nan, 'KH01_4e': nan, 'KH01_4f': nan, 'KH01_4g': nan, 'KH01_4txt': nan, 'Ial06_16': nan, 'Ial06_17': nan, 'PC69_40': nan, 'S78_265b': nan, 'RR05_2': nan, 'RR05_3': nan, 'RR05_4': nan, 'GKA07_1.p269': nan, 'mGKA07-PTPR92_p269': nan, 'DIMS14_10': nan, 'DIMS14_12': nan, 'DIMS14_14': nan, 'DIMS14_14b': nan, 'DIMS14_17a': nan, 'DIMS14_17b': nan, 'DIMS14_17c': nan, 'DIMS14_20': nan, 'DIMS14_23': nan, 'DIMS14_26': nan, 'DIMS14_29': nan, 'DIMS14_29b': nan, 'DIMS14_32': nan, 'DIMS14_35': nan, 'DIMS14_36': nan, 'DIMS14_39': nan, 'Ial06_18a': nan, 'Ial06_18b': nan, 'Ial06_18c': nan, 'Ial06_19a': nan, 'Ial06_19b': nan, 'Ial06_19c': nan, 'Ial06_21a': nan, 'Ial06_21b': nan, 'Ial06_21c': nan, 'Ial06_22a': nan, 'Ial06_22b': nan, 'Ial06_22c': nan, 'Ial06_24a': nan, 'Ial06_24b': nan, 'Ial06_24c': nan, 'Ial06_20a': nan, 'Ial06_20b': nan, 'Ial06_20c': nan, 'Ial06_23a': nan, 'Ial06_23b': nan, 'Ial06_23c': nan, 'KB94_A1.6': nan, 'KB94_A1.8': nan, 'KB94_A1.10': nan, 'KB94_A30.10': nan}\n"
+      "warng ICF.getElemAbundance: Unable to eval abun[\"S2\"] + abun[\"S3\"] + abun[\"S4\"] + abun[\"S5\"]\n",
+      "warng ICF.getElemAbundance: Unable to eval abun[\"Fe2\"] + abun[\"Fe3\"]\n",
+      "warng ICF.getElemAbundance: Unable to eval abun[\"S2\"] + abun[\"S3\"] + abun[\"S4\"] + abun[\"S5\"]\n",
+      "warng ICF.getElemAbundance: Unable to eval abun[\"Fe2\"] + abun[\"Fe3\"]\n",
+      "{'direct_He.23': nan, 'direct_N.23': nan, 'direct_N.234': nan, 'direct_N.2345': nan, 'direct_O.23': 0.003, 'direct_O.234': nan, 'direct_O.2345': nan, 'direct_S.23': nan, 'direct_S.234': nan, 'direct_S.2345': nan, 'direct_Ne.23': nan, 'direct_Ne.235': nan, 'direct_Ne.2345': nan, 'direct_Ne.345': nan, 'direct_Ne.2356': nan, 'direct_Mg.45': nan, 'direct_Ar.23': nan, 'direct_Ar.234': nan, 'direct_Ar.345': nan, 'direct_Cl.23': nan, 'direct_Cl.34': nan, 'direct_Cl.234': nan, 'TPP77_13': nan, 'TPP77_14': nan, 'TPP77_15': 1.8e-05, 'PHCD07_12': 1.8e-05, 'PHCD07_13': 1.3250000000000002e-05, 'PHCD07_16': nan, 'PHCD07_17': nan, 'ITL94_19': nan, 'ITL94_20': nan, 'PTPR92_21': nan, 'KB94_A0': nan, 'KB94_A6': nan, 'KB94_A8': nan, 'KB94_A10': nan, 'KB94_A10b': 0.003, 'KB94_A12': nan, 'KB94_A13.10': nan, 'KB94_A13.10b': nan, 'KB94_A16': nan, 'KB94_A19': nan, 'KB94_A21': nan, 'KB94_A26': nan, 'KB94_A27': nan, 'KB94_A28.6': nan, 'KB94_A28.8': nan, 'KB94_A28.10': nan, 'KB94_A28.10b': 1.8e-05, 'KB94_A30.0': nan, 'KB94_A32': nan, 'KB94_A36.6': nan, 'KB94_A36.8': nan, 'KB94_A36.10': nan, 'KB94_A36.10b': nan, 'KB94_A38.6': nan, 'KB94_A38.8': nan, 'KB94_A38.10': nan, 'KH01_4a': nan, 'KH01_4b': nan, 'KH01_4c': nan, 'KH01_4d': nan, 'KH01_4e': nan, 'KH01_4f': nan, 'KH01_4g': nan, 'KH01_4txt': nan, 'Ial06_16': 0.003, 'Ial06_17': nan, 'PC69_40': 1.8e-05, 'S78_265b': 2e-05, 'RR05_2': nan, 'RR05_3': nan, 'RR05_4': nan, 'GKA07_1.p269': nan, 'mGKA07-PTPR92_p269': nan, 'DIMS14_10': nan, 'DIMS14_12': nan, 'DIMS14_14': nan, 'DIMS14_14b': nan, 'DIMS14_17a': nan, 'DIMS14_17b': nan, 'DIMS14_17c': nan, 'DIMS14_20': nan, 'DIMS14_23': nan, 'DIMS14_26': nan, 'DIMS14_29': nan, 'DIMS14_29b': nan, 'DIMS14_32': nan, 'DIMS14_35': nan, 'DIMS14_36': nan, 'DIMS14_39': nan, 'Ial06_18a': nan, 'Ial06_18b': nan, 'Ial06_18c': nan, 'Ial06_19a': 1.3696e-05, 'Ial06_19b': 1.3722e-05, 'Ial06_19c': 1.6224000000000003e-05, 'Ial06_21a': nan, 'Ial06_21b': nan, 'Ial06_21c': nan, 'Ial06_22a': nan, 'Ial06_22b': nan, 'Ial06_22c': nan, 'Ial06_24a': nan, 'Ial06_24b': nan, 'Ial06_24c': nan, 'Ial06_20a': nan, 'Ial06_20b': nan, 'Ial06_20c': nan, 'Ial06_23a': nan, 'Ial06_23b': nan, 'Ial06_23c': nan, 'KB94_A1.6': nan, 'KB94_A1.8': nan, 'KB94_A1.10': nan, 'KB94_A1.10b': nan, 'KB94_A30.10': nan, 'KB94_A30.10b': nan}\n",
+      "direct_O.23    : 3.00e-03 from O = O2 + O3                                                                \n",
+      "TPP77_15       : 1.80e-05 from Ne = (Ne3) * (O2 + O3) / O3                                                \n",
+      "PHCD07_12      : 1.80e-05 from Ne = (Ne3) * (O2 + O3) / O3                                                \n",
+      "PHCD07_13      : 1.33e-05 from Ne = (Ne3) * (0.753 + 0.142 * O3 / (O2 + O3) + 0.171 / O3 * (O2 + O3))     \n",
+      "KB94_A10b      : 3.00e-03 from O = O2 + O3                                                                \n",
+      "KB94_A28.10b   : 1.80e-05 from Ne = (Ne3) * KB94_A10b  / O3                                               \n",
+      "Ial06_16       : 3.00e-03 from O = O2 + O3                                                                \n",
+      "PC69_40        : 1.80e-05 from Ne = (Ne3) * (O2 + O3) / O3                                                \n",
+      "S78_265b       : 2.00e-05 from Ne = (Ne3) * (O2 + O3) / (O3 - 0.2 * O2)                                   \n",
+      "Ial06_19a      : 1.37e-05 from Ne = (Ne3) * (-0.385 * O3 / (O2 + O3) + 1.365 + 0.022 * (O2 + O3) / O3)    \n",
+      "Ial06_19b      : 1.37e-05 from Ne = (Ne3) * (-0.405 * O3 / (O2 + O3) + 1.382 + 0.021 * (O2 + O3) / O3)    \n",
+      "Ial06_19c      : 1.62e-05 from Ne = (Ne3) * (-0.591 * O3 / (O2 + O3) + 0.927 + 0.546 * (O2 + O3) / O3)    \n"
      ]
     }
    ],
    "source": [
-    "elem_abun = icf.getElemAbundance(elem_abun)  # performs all the possible element abundance computations given the input ionic abundance set and available icf  \n",
-    "print(elem_abun)"
+    "elem_abun = icf.getElemAbundance(atom_abun)  # performs all the possible element abundance computations given the input ionic abundance set and available icf  \n",
+    "print(elem_abun)\n",
+    "for this_icf, abun in elem_abun.items():\n",
+    "    if np.isfinite(abun):\n",
+    "        print(f\"{this_icf:15s}: {abun:.2e} from {icf.getExpression(this_icf):75s}\")"
    ]
   },
   {
@@ -207,7 +226,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
